--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "fs": "^0.0.1-security",
     "https-proxy-agent": "^7.0.6",
     "imapflow": "^1.0.178",
+    "jsencrypt": "^3.3.2",
     "mailparser": "^3.7.2",
     "path": "^0.12.7",
     "puppeteer-real-browser": "^1.3.22",
